--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 
 	<link rel="icon" href="/assets/player/images/favicon.png"/>
 
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet"/>
+	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet"/>
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 
 	<!-- FOR DEVELOPMENT -->
@@ -21,14 +21,11 @@
 
 	<!-- FOR PRODUCTION -->
 	<!-- INJECT:css -->
-	<!-- endinject -->
-
-	<link href="/assets/player/css/styles.css" rel="stylesheet" type="text/css"/>
 
 </head>
 <body>
 
-	<main id="parent-container" class="parent-container container z-depth-1"></main>
+	<main id="parent-container"></main>
 
 	<!-- FOR DEVELOPMENT -->
 	<!-- inject:vendor:js -->
@@ -36,7 +33,6 @@
 
 	<!-- FOR PRODUCTION -->
 	<!-- INJECT:js -->
-	<!-- endinject -->
 
 	<script src="/assets/player/js/bundle.js"></script>
 
