[improve] player component and playlist view

--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
 	<!-- FOR PRODUCTION -->
 	<!-- INJECT:js -->
 
+	<script src="https://content.jwplatform.com/libraries/DpUqOQfh.js"></script>
 	<script src="/assets/player/js/bundle.js"></script>
 
 </body>
