--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 
 	<link rel="icon" href="/assets/player/images/favicon.png"/>
 
-	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet"/>
+	<link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet"/>
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 
 	<!-- FOR DEVELOPMENT -->
