[add] redux in project

--- a/app/index.html
+++ b/app/index.html
@@ -15,24 +15,12 @@
 	<link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet"/>
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 
-	<!-- FOR DEVELOPMENT -->
-	<!-- inject:vendor:css -->
-	<!-- endinject -->
-
-	<!-- FOR PRODUCTION -->
-	<!-- INJECT:css -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"/>
 
 </head>
 <body>
 
 	<main id="parent-container"></main>
-
-	<!-- FOR DEVELOPMENT -->
-	<!-- inject:vendor:js -->
-	<!-- endinject -->
-
-	<!-- FOR PRODUCTION -->
-	<!-- INJECT:js -->
 
 	<script src="https://content.jwplatform.com/libraries/DpUqOQfh.js"></script>
 	<script src="/assets/player/js/bundle.js"></script>
