--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-	<main id="parent-container"></main>
+	<main id="parent-container" style="height:100%"></main>
 
 	<script src="https://content.jwplatform.com/libraries/DpUqOQfh.js"></script>
 	<script src="/assets/player/js/bundle.js"></script>
