--- a/app/index.html
+++ b/app/index.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 	<meta charset="utf-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-	<meta name="robots" content="noindex"/>
 	<meta name="googlebot" content="noindex"/>
-
+	<meta name="robots" content="noindex"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 	<title>player</title>
-
 	<link rel="icon" href="/assets/player/images/favicon.png"/>
-
-	<link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet"/>
-	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Sans"/>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"/>
-
 </head>
 <body>
-
 	<main id="parent-container" style="height:100%"></main>
-
 	<script src="https://content.jwplatform.com/libraries/DpUqOQfh.js"></script>
 	<script src="/assets/player/js/bundle.js"></script>
-
 </body>
 </html>
