[add] plugin to extract css from js file

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Sans"/>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"/>
+	<link rel="stylesheet" href="/assets/player/css/styles.css"/>
 </head>
 <body>
 	<main id="parent-container" style="height:100%"></main>
