[add] jwplayer player js file

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,8 @@
 </head>
 <body>
 	<main id="parent-container" style="height:100%"></main>
-	<script src="https://content.jwplatform.com/libraries/DpUqOQfh.js"></script>
+	<!-- <script src="https://content.jwplatform.com/libraries/DpUqOQfh.js"></script> -->
+	<script src="/assets/player/js/vendor/jwplayer.min.js"></script>
 	<script src="/assets/player/js/bundle.js"></script>
 </body>
 </html>
