[add] plyr library to play videos

--- a/app/index.html
+++ b/app/index.html
@@ -12,10 +12,17 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="/assets/player/css/styles.css"/>
+	<!--
+	<style>
+		.plyr iframe{
+			height: 100% !important;
+			width: 100% !important;
+		}
+	</style>
+	-->
 </head>
 <body>
 	<main id="parent-container" style="height:100%"></main>
-	<!-- <script src="https://content.jwplatform.com/libraries/DpUqOQfh.js"></script> -->
 	<script src="/assets/player/js/vendor/jwplayer.min.js"></script>
 	<script src="/assets/player/js/bundle.js"></script>
 </body>
