[add] general improvements

--- a/app/index.html
+++ b/app/index.html
@@ -8,18 +8,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 	<title>player</title>
 	<link rel="icon" href="/assets/player/images/favicon.png"/>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Sans"/>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans"/>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"/>
 	<link rel="stylesheet" href="/assets/player/css/styles.css"/>
-	<!--
-	<style>
-		.plyr iframe{
-			height: 100% !important;
-			width: 100% !important;
-		}
-	</style>
-	-->
 </head>
 <body>
 	<main id="parent-container" style="height:100%"></main>
