--- a/app/index.html
+++ b/app/index.html
@@ -11,11 +11,10 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans"/>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="/assets/player/css/styles.css"/>
+	<!-- INJECT:css -->
 </head>
 <body>
 	<main id="parent-container" style="height:100%"></main>
-	<script src="/assets/player/js/vendor/jwplayer.min.js"></script>
-	<script src="/assets/player/js/bundle.js"></script>
+	<!-- INJECT:js -->
 </body>
 </html>
