--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
-	<meta name="googlebot" content="noindex"/>
-	<meta name="robots" content="noindex"/>
+	<meta name="googlebot" content="noindex,nofollow"/>
+	<meta name="robots" content="noindex,nofollow"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 	<title>player</title>
 	<link rel="icon" href="/assets/player/images/favicon.png"/>
