--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8"/>
 	<meta name="googlebot" content="noindex,nofollow"/>
 	<meta name="robots" content="noindex,nofollow"/>
+   <meta name="google-site-verification" content="jrR2L3Z0CAMtn_3nlkU0mVW_LxiRmyoVj7d07wSgJgo" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 	<title>player</title>
 	<link rel="icon" href="/assets/player/images/favicon.png"/>
