[update] assets url

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
    <meta name="google-site-verification" content="jrR2L3Z0CAMtn_3nlkU0mVW_LxiRmyoVj7d07wSgJgo" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 	<title>player</title>
-	<link rel="icon" href="/assets/player/images/favicon.png"/>
+  <link rel="icon" href="/favicon.png"/>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans"/>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 	<!-- INJECT:css -->
